--- a/src/main/resources/templates/recipe-maker-form.html
+++ b/src/main/resources/templates/recipe-maker-form.html
@@ -78,9 +78,31 @@
             </tr>
             <tr></tr>
             <tr>
-                    <td>Preparation:</td>
-                    <td><textarea rows="4" cols="40" th:field="*{preparation}" ></textarea>
-                        </td>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Instruction</th>
+                                <th>
+                                    <button type="submit" name="addPrepRow" >Add Instructions</button>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="prep, prepStat : *{preparation}">
+                                <td th:text="${prepStat.count}"</td>
+                                <td>
+                                    <input type="text" th:field="*{preparation[__${prepStat.index}__].instruction}" />
+                                </td>
+                                <td>
+                                    <button type="submit" name="removePrepRow"
+                                            th:value="${prepStat.index}" th:text="Remove">Remove Instruction</button>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                        
                 </tr>
             <tr><td><button type="submit" name="save" th:text="Save">Save Recipe</button></td></tr>
         </table>
