--- a/src/main/resources/templates/new-ingredient.html
+++ b/src/main/resources/templates/new-ingredient.html
@@ -21,6 +21,11 @@
                     <td>Description:</td>
                     <td><input type="text" th:field="*{description}" /></td>
                 </tr>
+
+                <!-- <tr>
+                    <td>Tags:</td>
+                    <td><input type ="text" th:field="*{tags}" /></td>
+                </tr> -->
                                           
                 <tr>
                     <td colspan="2"><button type="submit">Save</button> </td>
