frontend and app properties

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
                 <li>Recipe Maker: Make a new Mix and share</li>
                 <li>Cocktail Recipe: Collect your ingredients, and Add instructions, generate flavor profile</li>
             </ul>
-            <p>View a <a href="/recipe">recipe</a>.</p>
+           <p><a href="/login">Login</a> and get started!</p>
+           
     </body>
 
 </html>
