--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,14 @@
             You have been logged out.
         </div>
         <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
+            <div><label for="username"> User Name :  </label>
+                <input type="text" id="username" name="username" autofocus="autofocus"/></div>
+            <div><label for="password"> Password:  </label>
+                <input type="password" id="password" name="password"/>
+            </div>
             <div><input type="submit" value="Sign In"/></div>
         </form>
+        <p>Don't have an account?</p>
+        <a href="@{/registration}">Create and account!</a>
     </body>
 </html>
