--- a/src/main/resources/templates/recipe-index.html
+++ b/src/main/resources/templates/recipe-index.html
@@ -8,7 +8,7 @@
 <body>
 <div align="center">
     <h1>Recipe List</h1>
-    <a href="/new">Create New Recipe</a>
+    <a href="/recipes/userRecipes/new">Create New Recipe</a>
     <br/><br/>
     <table border="1" cellpadding="10">
         <thead>
